mod: secciones base del hompage

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,12 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :root{
-    --color-white: #FAFAFA;
+    --color-white: #ebebeb;
     --color-darkblue: #375A7F;
+
+    --font-roboto: "Roboto", sans-serif;
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: var(--font-roboto);
 }
 
 main{
@@ -32,19 +37,42 @@ main{
 }
 
 .section-page{
-    min-height: 80vh;
+    min-height: 93vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.section-page-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+
 .title-user-port{
     color: var(--color-white);
-    font-size: 8em;
+    font-size: 5em;
     text-align: center;
     text-transform: uppercase;
-    font-weight: bold;
+    font-weight: 700;
     text-shadow: 3px 3px 4px var(--color-darkblue);
+}
+
+.title-section{
+    color: var(--color-white);
+    font-size: 37px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.title-section-info{
+    color: var(--color-white);
+    text-align: center;
+    font-size: 18px;
+    margin-bottom: 0px;
 }
 
 .subtitle-user-port{
@@ -52,6 +80,6 @@ main{
     font-size: 1.5em;
     text-align: center;
     text-transform: uppercase;
-    font-weight: bold;
+    font-style: italic;
     text-shadow: 3px 3px 4px var(--color-darkblue);
 }
